--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   package_info_plus: ^8.3.1
   pretty_qr_code: ^3.5.0
 
+
+  # google maps
+  google_maps_flutter: ^2.13.1
+  google_maps_flutter_web: ^0.5.14+2
+
   # connectivity_plus
   connectivity_plus: ^6.1.5
   file_picker: ^10.3.2
